Responsive for different resolution

--- a/auctioneer.html
+++ b/auctioneer.html
@@ -10,7 +10,7 @@
      <link rel="stylesheet" href="css/bootstrap.css">
      <link rel="stylesheet" href="css/bootstrap-grid.css">
      <link rel="stylesheet" href="css/bootstrap.min.css">
-     <link rel="stylesheet" href="css/auctioneer.css">
+     <link rel="stylesheet" href="css/style.css">
  
     <title>BTRC AUCTION</title>
 </head>
@@ -19,7 +19,7 @@
 
         <!-- NavBar Section -->
         <section class="container-fluid" id="sec1">
-            <nav>
+            <nav class="navigation">
                 <div id="navbar">
                     <p id="home">Home</p>
                     <button type="submit" class="btn btn-sm" id="result">Auction Result</button>
@@ -120,53 +120,6 @@
                                 </tr>
                             </tbody>
                         </table>
-
-                        <!-- <div class="card" id="card2" style="height: 50vh;">
-                            <div class="card-body" id="card_body">
-                                <table class="table table-bordered" id="table_id" >
-                                    <thead id="table_header">
-                                    <tr>
-                                        <div class="row">
-                                            <th scope="col-6">qualified bidders</th>
-                                            <th scope="col-4">response time</th>
-                                            <th scope="col-2">rank</th>
-                                        </div>
-                                    </tr>
-                                    </thead>
-
-                                    <tbody id="row_id">
-                                        <tr>
-                                            <div class="row" >
-                                                <td><div scope="col-6" >Bangla Link</div></td>
-                                                <td><div scope="col-4">time</div></td>
-                                                <td><div scope="col-2">rank</div></td>
-                                            </div>
-                                        </tr>
-                                        <tr>
-                                            <div class="row">
-                                                <td><div scope="col-6">Grameen Phone</div></td>
-                                                <td><div scope="col-4">time</div></td>
-                                                <td><div scope="col-2">rank</div></td>
-                                            </div>
-                                        </tr>
-                                        <tr>
-                                            <div class="row">
-                                                <td><div scope="col-6">Robi</div></td>
-                                                <td><div scope="col-4">time</div></td>
-                                                <td><div scope="col-2">rank</div></td>
-                                            </div>
-                                        </tr>
-                                        <tr>
-                                            <div class="row">
-                                                <td><div scope="col-6">Teletalk</div></td>
-                                                <td><div scope="col-4">time</div></td>
-                                                <td><div scope="col-2">rank</div></td>
-                                            </div>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </div> 
-                        </div> -->
                     </div>
 
                     <div class="col-sm-6">
