Bold Responsive time

--- a/auctioneer.html
+++ b/auctioneer.html
@@ -93,28 +93,28 @@
                                 <tr>
                                     <div class="row" >
                                         <td><div scope="col-6" >Bangla Link</div></td>
-                                        <td><div scope="col-4">time</div></td>
+                                        <td id="res_time"><div scope="col-4"><b>time</b></div></td>
                                         <td><div scope="col-2">rank</div></td>
                                     </div>
                                 </tr>
                                 <tr>
                                     <div class="row">
                                         <td><div scope="col-6">Grameen Phone</div></td>
-                                        <td><div scope="col-4">time</div></td>
+                                        <td id="res_time"><div scope="col-4"><b>time</b></div></td>
                                         <td><div scope="col-2">rank</div></td>
                                     </div>
                                 </tr>
                                 <tr>
                                     <div class="row">
                                         <td><div scope="col-6">Robi</div></td>
-                                        <td><div scope="col-4">time</div></td>
+                                        <td id="res_time"><div scope="col-4"><b>time</b></div></td>
                                         <td><div scope="col-2">rank</div></td>
                                     </div>
                                 </tr>
                                 <tr>
                                     <div class="row">
                                         <td><div scope="col-6">Teletalk</div></td>
-                                        <td><div scope="col-4">time</div></td>
+                                        <td id="res_time"><div scope="col-4"><b>time</b></div></td>
                                         <td><div scope="col-2">rank</div></td>
                                     </div>
                                 </tr>
