--- a/auctioneer.html
+++ b/auctioneer.html
@@ -24,8 +24,9 @@
                     <p id="home">Home</p>
                     <button type="submit" class="btn btn-sm" id="result">Auction Result</button>
                 </div>
-                <div>
+                <div id="navbar">
                     <h5 id="auctioneer">BTRC(Auctioneer)</h5>
+                    <button type="submit" class="btn btn-sm" id="result">Logout</button>
                 </div>
             </nav>
         </section>
