--- a/bidder.html
+++ b/bidder.html
@@ -23,8 +23,9 @@
                 <div id="navbar">
                     <p id="home">Home</p>
                 </div>
-                <div>
-                    <p id="auctioneer">Bidder Name</p>
+                <div id="navbar">
+                    <h5 id="auctioneer">Bidder</h5>
+                    <button type="submit" class="btn btn-sm" id="result">Logout</button>
                 </div>
             </nav>
         </section>
