auctionner, logout, round, time html&css changed for 1920*1080px

--- a/auctioneer.html
+++ b/auctioneer.html
@@ -26,7 +26,7 @@
                 </div>
                 <div id="navbar">
                     <h5 id="auctioneer">BTRC(Auctioneer)</h5>
-                    <button type="submit" class="btn btn-sm" id="result">Logout</button>
+                    <button type="submit" class="btn btn-sm" id="logout">Logout</button>
                 </div>
             </nav>
         </section>
@@ -93,7 +93,7 @@
                             <tbody id="row_id">
                                 <tr>
                                     <div class="row" >
-                                        <td><div scope="col-6" >Bangla Link</div></td>
+                                        <td><div scope="col-6" >Banglalink</div></td>
                                         <td id="res_time"><div scope="col-4"><b>time</b></div></td>
                                         <td><div scope="col-2">rank</div></td>
                                     </div>
