responsive touch up

--- a/auctioneer.html
+++ b/auctioneer.html
@@ -124,7 +124,7 @@
                     </div>
 
                     <div class="col-sm-6">
-                        <div class="card" id="card_id"><!-- --changes-- -->
+                        <div class="card" id="card_id">
                             <div class="card-body">
                                 <div class="row" id="block">
 
