--- a/bidder.html
+++ b/bidder.html
@@ -24,7 +24,7 @@
                     <p id="home">Home</p>
                 </div>
                 <div id="navbar">
-                    <h5 id="auctioneer">Bidder</h5>
+                    <h5 id="bidder">Bidder</h5>
                     <button type="submit" class="btn btn-sm" id="logout">Logout</button>
                 </div>
             </nav>
